<resources>
    <string name="app_name">贵州草地</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_yhsw">有害生物</string>
    <string name="title_activity_swdyx">生物多样性</string>
    <string name="title_activity_gsmm">古树名木</string>
    <string name="title_activity_yzl">营造林</string>
    <string name="title_activity_slzylxqc">森林资源连续清查</string>
    <string name="title_activity_erdiao">森林资源规划设计调查</string>
    <string name="title_activity_ydyzdc">森林资源连续清查样地因子调查</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="callout_location_lonlat">切换坐标系展示</string>
    <string name="currentinfo">当前位置信息</string>
    <string name="lon">经度：</string>
    <string name="lat">纬度：</string>
    <string name="lon1">经度1：</string>
    <string name="lat1">纬度1：</string>
    <string name="xian_80_x">X:</string>
    <string name="xian_80_y">Y:</string>
    <string name="randersetting">渲染</string>
    <string name="viewname_tckz">图层控制</string>
    <string name="viewname_jct">基础图</string>
    <string name="viewname_yxt">影像图</string>
    <string name="largertxtsize">20sp</string>
    <string name="img_select">影像图层选择</string>
    <string name="data_download">数据下载</string>
    <string name="data_upserver">数据上传</string>
    <string name="selectquxian">选择区县</string>
    <string name="tipinfo">信息提示</string>
    <string name="search_starttime">开始时间</string>
    <string name="search_endtime">结束时间</string>
    <string name="shoudongdingwei">手动定位</string>
    <string name="toumingdu">透明度:</string>
    <string name="currentvalue">当前值:</string>
    <string name="reset">重置</string>
    <string name="yulan">填充色</string>
    <string name="bianjiekuandu">边界宽度</string>
    <string name="bianjiecolor">边界颜色</string>
    <string name="sure">确    定</string>
    <string name="sure2">只设置透明度</string>
    <string name="cancle">&#160;&#8201;取&#160;&#160;消&#160;&#8201;</string>
    <string name="back">返    回</string>
    <string name="zuijinxiaoshi">最近小时</string>
    <string name="guijichaxun">轨迹查询</string>
    <string name="selecttime">点击选择时间</string>
    <string name="guiji">轨迹</string>
    <string name="zuji">足迹</string>
    <string name="huifang"> 回 放 </string>
    <string name="sys_setting">系统配置</string>
    <string name="sys_tmd">透明度设置</string>
    <string name="sys_color">颜色及边界设置</string>
    <string name="versioncheck">版本更新</string>
    <string name="xbatrbutinfo">小班属性信息</string>
    <string name="lishijilu">历史记录</string>
    <string name="dmsearch">小地名查询</string>
    <string name="addxdm">添加小地名</string>
    <string name="xdm_name">地名:</string>
    <string name="xdm_type">类型:</string>
    <string name="xbtcxz">空间数据图层选择</string>
    <string name="searchresult">查询结果</string>
    <string name="xbsearchresult">小班查询列表</string>
    <string name="xsxjlx">显示行进路线</string>
    <string name="rcxcgl">日常巡查管理</string>
    <string name="dwrmgl">动物扰民管理</string>
    <string name="ysdwdc">野生动物调查</string>
    <string name="yszwdc">野生植物调查</string>
    <string name="xcddc">巡查点调查</string>
    <string name="yyyb">疫源疫病</string>
    <string name="tjxcxx">添加巡查信息</string>
    <string name="xcry">巡查人员：</string>
    <string name="xcbm">巡查部门：</string>
    <string name="xcdd">巡查地点：</string>
    <string name="xcsj">巡查时间：</string>
    <string name="cdrs">出动人数：</string>
    <string name="cdrnum">出动人数</string>
    <string name="cdcls">出动车辆数：</string>
    <string name="bxcdw">被巡查单位：</string>
    <string name="bxcr">被巡查人：</string>
    <string name="jd">经度：</string>
    <string name="wd">纬度：</string>
    <string name="xcjg">巡查结果：</string>
    <string name="sfywfxw">是否违法：</string>
    <string name="bz">备注：</string>
    <string name="bc">&#160;&#160;保&#160;&#160;存&#160;&#160;</string>
    <string name="zxbc">在线上传</string>
    <string name="lxbc">离线保存</string>
    <string name="addsuccess">添加成功</string>
    <string name="updatesuccess">更新成功</string>
    <string name="addfailed">添加失败</string>
    <string name="xcrynotnull">巡查人员不能为空</string>
    <string name="xcddnotnull">巡查地点不能为空</string>
    <string name="cdrcnotnull">出动人次不能为空</string>
    <string name="xctimenotnull">巡查时间不能为空</string>
    <string name="edit">修改巡查信息</string>
    <string name="editsuccess">编辑成功</string>
    <string name="editfailed">编辑失败</string>
    <string name="check">查看巡查信息</string>
    <string name="deletesuccess">删除成功</string>
    <string name="deletefailed">删除失败</string>
    <string name="longorlannull">定位失败，经度值或纬度值为空</string>
    <string name="locationsuccess">定位成功</string>
    <string name="actionname">事件名称</string>
    <string name="actionname1">事件名称：</string>
    <string name="rmdw">扰民动物</string>
    <string name="rmdw1">扰民动物：</string>
    <string name="sfclwb">是否处理完毕</string>
    <string name="sfclwb1">是否处理完：</string>
    <string name="search">搜索</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="getout">导出</string>
    <string name="actiontime">发生时间</string>
    <string name="actiontime1">发生时间：</string>
    <string name="zhi">至</string>
    <string name="shujusuoshu">数据所属</string>
    <string name="brr">被扰人</string>
    <string name="brr1">被扰人：</string>
    <string name="zbr">主办人</string>
    <string name="zbr1">主办人：</string>
    <string name="fsdd">发生地点</string>
    <string name="fsdd1">发生地点：</string>
    <string name="actiondescription">事件描述：</string>
    <string name="actionresult">处理结果：</string>
    <string name="addanimaltrouble">添加野生动物扰民事件</string>
    <string name="editanimaltrouble">修改野生动物扰民事件信息</string>
    <string name="checkanimaltroubleinfor">查看野生动物扰民事件信息</string>
    <string name="troublenamenotnull">扰民事件名称不能为空</string>
    <string name="adressnotnull">发生地点不能为空</string>
    <string name="actiontimenotnull">发生时间不能为空</string>
    <string name="shzt">审核状态：</string>
    <string name="shzt1">审核状态</string>
    <string name="dwmc">动物名称</string>
    <string name="dwmc1">动物名称：</string>
    <string name="hdfs">获得方式</string>
    <string name="jzzt">救助状态</string>
    <string name="jzzm">救护站名</string>
    <string name="jzzm1">救护站名：</string>
    <string name="sqsj">申请时间</string>
    <string name="sqsj1">申请时间：</string>
    <string name="dwsl">动物数量</string>
    <string name="dwsl1">动物数量：</string>
    <string name="sqr">申请人</string>
    <string name="sqr1">申请人：</string>
    <string name="edit1">编辑</string>
    <string name="notstartsave">未开始救助</string>
    <string name="finishsave">救助结束</string>
    <string name="issaving">正在救助</string>
    <string name="pass">通过</string>
    <string name="notcheck">未审核</string>
    <string name="jhzxxgl">救护站信息管理</string>
    <string name="checkout">审核</string>
    <string name="ckdwjzxx">查看动物救助信息</string>
    <string name="jbxx">基本信息</string>
    <string name="jhgc">救护过程</string>
    <string name="lxdh">联系电话：</string>
    <string name="dwly">动物来源：</string>
    <string name="sqyy">申请原因：</string>
    <string name="xgms">相关描述：</string>
    <string name="checksaveinfo">审核动物救助信息</string>
    <string name="checkbackinfor">审核意见：</string>
    <string name="tijiao">提    交</string>
    <string name="addsaveanim">新增救助动物</string>
    <string name="connectimage">相关图片：</string>
    <string name="upload">上  传</string>
    <string name="jzzmc">救助站名称</string>
    <string name="fzr">负责人</string>
    <string name="xzqy">行政区域</string>
    <string name="phonenum">电话</string>
    <string name="detailaddress">详细地址</string>
    <string name="detailaddress1">详细地址：</string>
    <string name="location">定位</string>
    <string name="checksavestationinfo">查看救护站信息</string>
    <string name="editsavestationinfo">修改救护站信息</string>
    <string name="addsavestationinfo">新增救护站信息</string>
    <string name="caozuo">操作</string>
    <string name="glry">管理人员：</string>
    <string name="qywz">区域位置：</string>
    <string name="jztj">救助条件：</string>
    <string name="jhzmnotnull">救护站名不能为空</string>
    <string name="glrynotnull">管理人员不能为空</string>
    <string name="wdnotnull">纬度不能为空</string>
    <string name="jdnotnull">经度不能为空</string>
    <string name="qywznotnull">区域位置不能为空</string>
    <string name="jidiname">基地名称</string>
    <string name="jidiname1">基地名称：</string>
    <string name="jidiheader">基地负责人</string>
    <string name="jidiheader1">基地负责人：</string>
    <string name="jidixingzhi">基地性质</string>
    <string name="jidixingzhi1">基地性质：</string>
    <string name="zhuceshijian">注册时间</string>
    <string name="jididizhi">基地地址</string>
    <string name="jididizhi1">基地地址：</string>
    <string name="lianxifangshi">联系方式</string>
    <string name="lianxifangshi1">联系方式：</string>
    <string name="dengjishijian">登记时间</string>
    <string name="jydwfw">经营动物范围</string>
    <string name="jydwfw1">经营范围：</string>
    <string name="jyyt">经营用途：</string>
    <string name="xwdd">销往地点：</string>
    <string name="jbr">经办人：</string>
    <string name="checkxyfzjdinfo">查看驯养繁殖基地信息</string>
    <string name="xyfzjdgl">驯养繁殖基地管理</string>
    <string name="editxyfzjdinfo">修改驯养繁殖基地信息</string>
    <string name="addxyfzjdinfo">添加驯养繁殖基地信息</string>
    <string name="jdmcnotnull">基地名称不能为空</string>
    <string name="jdxznotnull">基地性质不能为空</string>
    <string name="jdfwnotnull">经营范围不能为空</string>
    <string name="jydwdwgl">经营动物单位管理</string>
    <string name="jydwfzr">单位负责人</string>
    <string name="jydwfzr1">单位负责人：</string>
    <string name="jydwdz">地址</string>
    <string name="jydwdz1">地址：</string>
    <string name="jydwdwcheck">查看经营动物单位信息</string>
    <string name="jydwdwedit">修改经营动物单位信息</string>
    <string name="jydwdwadd">添加经营动物单位信息</string>
    <string name="dwfzrnotnull">单位负责人不能为空</string>
    <string name="lxfsnotnull">联系方式不能为空</string>
    <string name="dwdznotnull">单位地址不能为空</string>
    <string name="bbgname">标本馆名称</string>
    <string name="bbgname1">名称：</string>
    <string name="bbgfzr">标本馆负责人</string>
    <string name="bbgfzr1">负责人：</string>
    <string name="bbggl">标本馆管理</string>
    <string name="bbgcheck">查看标本馆信息</string>
    <string name="bbgedit">修改标本馆信息</string>
    <string name="bbgadd">添加标本馆信息</string>
    <string name="bbgmcnotnull">标本馆名称不能为空</string>
    <string name="bbgfzrnotnull">标本馆负责人不能为空</string>
    <string name="bbgdznotnull">标本馆地址不能为空</string>
    <string name="cggl">餐馆管理</string>
    <string name="cgname">餐馆名称</string>
    <string name="cgname1">餐馆名称：</string>
    <string name="paysingle">人均消费</string>
    <string name="paysingle1">人均消费：</string>
    <string name="cgedit">修改餐馆信息</string>
    <string name="cgcheck">查看餐馆信息</string>
    <string name="cgadd">添加餐馆信息</string>
    <string name="cgmcnotnull">餐馆名称不能为空</string>
    <string name="cgdznotnull">餐馆地址不能为空</string>
    <string name="yyybjczgl">疫源疫病监测站管理</string>
    <string name="jczmc">监测站名称</string>
    <string name="jczmc1">监测站名称：</string>
    <string name="jczfzr">监测站负责人</string>
    <string name="jczfzr1">负责人：</string>
    <string name="jczcheck">查看监测站信息</string>
    <string name="jczedit">修改监测站信息</string>
    <string name="jczadd">添加监测站信息</string>
    <string name="jcznamenotnull">监测站名称不能为空</string>
    <string name="jczfzrnotnull">监测站负责人不能为空</string>
    <string name="jczdznotnull">监测站地址不能为空</string>
    <string name="jyscgl">交易市场管理</string>
    <string name="jyscname">交易市场名称</string>
    <string name="jyscname1">名称：</string>
    <string name="jysccheck">查看交易市场信息</string>
    <string name="jyscedit">修改交易市场信息</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本,是否更新?</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="qyxx_ssdq">所属地区:</string>
    <string name="qyxx_qyxz">企业性质:</string>
    <string name="qyxx_qymc">企业名称:</string>
    <string name="qyxx_qydz">企业地址:</string>
    <string name="qyxx_jyfw">经营范围:</string>
    <string name="qyxx_jgfw">加工范围:</string>
    <string name="qyxx_xkzh">许可证号:</string>
    <string name="qyxx_chzr">持&#160;&#8201;证&#160;&#8201;人:</string>
    <string name="qyxx_tj">提交</string>
</resources>