<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@drawable/background_view_rounded"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_exit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="left|center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/ico"
            android:contentDescription="@null"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/soft_update_title"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="#1b85cf" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/background_view_rounded"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingTop="20dp" >

        <TextView
            android:id="@+id/vertionupdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/soft_update_info"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <View
        android:id="@+id/viewLine"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="#cbcbcb" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_view_rounded"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/unUpdate_now_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_view_rounded"
            android:padding="10dp"
            android:text="@string/soft_update_later"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#cbcbcb" />

        <Button
            android:id="@+id/update_now_btn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_view_rounded"
            android:padding="10dp"
            android:text="@string/soft_update_updatebtn"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>